# RelayKeys

./: .gitignore  .python-virtualenv  ARDUINO_IMPLEMENTATION_SUMMARY.md  CODE_OF_CONDUCT.md  FINAL_VALIDATION.md  KEYBOARD_LAYOUTS_IMPLEMENTATION.md  LICENSE  README.html  README.md  SYNTHETIC_TESTING_SUMMARY.md  TESTING.md  _keysmap.py  arduino_ nRF52840.ino  blehid.py  build-installer.nsi  build.py  check_ports.py  cli_keymap.py  deamon - debug.bat  deamon.bat  docs-deploy.sh  lint_and_test.py  logfile.txt  makespecs.py  netlify.toml  package.json  poll_devname.py  poll_devname.spec  pyproject.toml  relayKeys.py  relaykeys-cli.py  relaykeys-cli.spec  relaykeys-example.cfg  relaykeys-qt.py  relaykeys-qt.spec  relaykeys.cfg  relaykeys.spec.ini  relaykeysclient.py  relaykeysd-service-restart.bat  relaykeysd-service-stop.py  (+13 more)
.github/workflows/: build.yml  codeql-analysis.yml  testsign.yml
arduino/: BTSTACK_ANALYSIS.md  PICO_W_FEASIBILITY.md  PICO_W_IMPLEMENTATION_SUMMARY.md  README.md
arduino/arduino_ESP32/: arduino_ESP32.ino  board_config.h
arduino/arduino_PicoW/: CMakeLists.txt  README.md  arduino_PicoW.ino  board_config.h  build.sh
arduino/arduino_nRF52840/: arduino_nRF52840.ino  relaykeys_common.h
arduino/arduino_nRF52840_v2/: arduino_nRF52840_v2.ino
arduino/examples/: README.md
arduino/examples/ESP32_Receiver_Test/: ESP32_Receiver_Test.ino
arduino/examples/RelayKeys_Basic_Test/: RelayKeys_Basic_Test.ino
arduino/receiver_dongle/: receiver_dongle.ino
arduino/receiver_dongle_ESP32/: README.md  board_config.h  receiver_dongle_ESP32.ino
arduino_nRF52840/: arduino_nRF52840.ino
assets/: mouserepeat.py
cli_keymaps/: de_keymap.json  uk_keymap.json
docs/: README.md  SUMMARY.md  conf.py  index.rst  installation.md  package-lock.json  package.json  start.rst  troubleshooting.md  wireless-mode.md
docs/.vuepress/: config.js
docs/advanced/: architecture.md  deploying-versions.md  developers.md  other-install-methods.md  requirements.md  server-setup.md  source.md  supported-boards.md
docs/advanced/api/: codebase.md  configuration.md  migrations.md  standalone.md
docs/advanced/app/: components.md  configuration.md  edit-form-grid.md  error-handling.md  events.md  global-settings-data-model.md  helpers.md  keyboard-shortcuts.md  modals.md  notifications.md  plugins.md  running-rabbit.md  sdk-api.md  standalone.md  store.md  tooltips.md
docs/api/: data.md  reference.md
docs/cli/: reference.md  relaykeys-cfg.md
docs/de/: README.md  SUMMARY.md  supporting-relaykeys.md  troubleshooting.md
docs/de/developers/: README.md  architecture.md  building-a-binary.md  contributing.md  credits.md  developing-without-a-board.md  other-projects.md  relaykeys-cfg.md  relaykeys-daemon.md
docs/de/installation/: README.md  checking-it-works.md  download-and-setup-software.md
docs/de/using-relaykeys/: README.md  relaykeys-cli.md  relaykeys-desktop-qt.md  relaykeys-serial.md
docs/developers/: architecture.md  building-a-binary.md  contributing.md  developing-without-a-board.md  documentation.md  other-projects.md  reference-2.md  reference.md  relaykeys-cfg.md  relaykeys-cli.md  relaykeys-daemon.md  relaykeys-serial.md  supported-boards.md  wireless-mode.md
docs/en/: README.md  SUMMARY.md  supporting-relaykeys.md
docs/en/developers/: README.md  architecture.md  contributing.md  credits.md  keyboard-layouts.md  relaykeys-cfg.md  relaykeys-daemon.md
docs/en/installation/: README.md  checking-it-works.md  download-and-setup-software.md
docs/en/using-relaykeys/: README.md  relaykeys-cli.md
docs/getting-started/: concepts.md  contributing.md  installation.md  introduction.md  supporting-directus.md  supporting-relaykeys.md  troubleshooting.md
docs/guides/: README.md  auth.md  basic-principles.md  cli.md  collections.md  communicator.md  database.md  fields.md  grid3.md  i18n.md  mindexpress.md  permissions.md  projects.md  relationships.md  roles.md  settings.md  snap-corefirst.md  sso.md  status.md  style-guide.md  thumbnailer.md  upgrading.md  user-guide.md
docs/installation/: checking-it-works.md
docs/installation/connecting-with-relaykeys/: wired-+-recieving-dongle.md  wired-mode.md  wireless-mode.md
docs/installation/supported-boards/: README.md  adafruit-feather-nrf52840-express.md  adafruit-itsybitsy-nrf52840.md  bluefruit-le-friend.md  raytac-dongle.md
docs/sdk/: python.md
docs/serial-api/: reference.md
docs/technical/: architecture.md  credits.md  other-projects.md  supported-boards.md
docs/usage/: command-line.rst  installation.md  quickstart.md
docs/usage/commercial/: communicator.md  grid3.md  mindexpress.rst
docs/using-relaykeys/: README.md  relaykeys-cli.md  relaykeys-serial.md
docs/using-relaykeys/guides/: README.md  communicator.md
examples/aac_software/: RelayKeys UK.gridset
examples/pygame_demo/: relaykeys-pygame.py
macros/: open_ios_notes.txt
resources/: all-keys.txt  demoSerial.py  mouserepeat.py  paperclip-requirements.txt  paperclip.py  relayKeys.py  viewComPorts.py
resources/aac-software/: RelayKeys DE.gridset  RelayKeys UK.gridset  RelayKeys US.gridset  RelayKeys.gridset  RelayKeys6x11.cddx  RelayKeysDemo_Communicator5_Pageset.vse  RelayKeysDemo_Grid3.gridset  RelayKeys_DE.gridset
resources/pygame-demo/: README.md  _keysmap.py  relaykeys-pygame.py
scripts/: build-installer.nsi  build.py  gui.bat  relaykeysd-service-restart.bat
src/relaykeys/: __init__.py
src/relaykeys/cli/: __init__.py  keymap.py  main.py
src/relaykeys/core/: __init__.py  blehid.py  client.py  daemon.py  serial_wrappers.py
src/relaykeys/gui/: __init__.py  qt_app.py
src/relaykeys/utils/: __init__.py  device_poller.py
tests/: __init__.py  conftest.py  enhanced_dummy_serial.py  hardware_detection.py  test_cli_keymap.py  test_daemon_integration.py  test_hardware_aware.py  test_relaykeysclient.py  test_serial_wrappers.py  test_synthetic_cli.py  test_synthetic_comprehensive.py  test_synthetic_edge_cases.py  test_synthetic_stress.py
tools/: README.md  generate_layouts.py  layout_converter.py  layout_definitions.py  switch_layout.py
(+28 files in other folders)
